# video-sourcing-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
docs/: prd.md  queries.md  requirements.md  test_m.md
openclaw/: README-openclaw.md  install_skill.sh  openclaw_config.example.json5
scripts/: demo_creator_analysis.py  fetch_youtube_data.py  test_video_analysis.py
src/video_sourcing_agent/: __init__.py
src/video_sourcing_agent/agent/: __init__.py  clarification.py  core.py  prompts.py  tool_policy.py
src/video_sourcing_agent/aggregator/: __init__.py
src/video_sourcing_agent/api/: __init__.py  apify_client.py  gemini_client.py  memories_v2_client.py
src/video_sourcing_agent/config/: __init__.py  pricing.py  settings.py
src/video_sourcing_agent/integrations/: __init__.py  openclaw_runner.py
src/video_sourcing_agent/models/: __init__.py  cost.py  metrics.py  query.py  result.py  video.py
src/video_sourcing_agent/router/: __init__.py  classifier.py  query_parser.py
src/video_sourcing_agent/tools/: __init__.py  base.py  exa.py  instagram_apify.py  memories_v2.py  registry.py  retry.py  (+5 more)
tests/: __init__.py  test_apify_tools.py  test_exa_tools.py  test_memories_v2_client.py  test_memories_v2_tools.py  test_models.py  test_openclaw_runner.py  test_openclaw_skill_docs.md  test_query_parser.py  test_retry.py  test_settings_memories_v2.py  test_sorting.py  test_streaming_performance.py  test_tool_policy.py  test_tool_policy_integration.py  test_utils.py  test_web_api.py  test_youtube_tools.py
(+17 files in other folders)
